--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -27,9 +27,12 @@
     width: 90%;
   }
 }
+.logo{
+  margin-left:35px;
+}
 .logo img{
-  width: 50px;
-  height: 50px;
+  width: 55px;
+  height: 55px;
 }
 .custom-navbar{
   padding: 20px 20px;
@@ -50,9 +53,15 @@
   color: #000000;
 }
 
-.active{
+.desktop-menu div:nth-child(5) a{
   padding: 3px 15px;
+  border: 2px solid #A00500;
+}
+
+.active{
+  padding: 3px 1px;
   border: 1.5px solid #A00500;
+  border-width: 0px 0px 2px 0px;
 }
 
 .desktop-menu div:not(:last-child){
